ArgoCD-Kafka-MetalLB/kafka-strimzi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    name: kafka
    env: lab

---

apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka
  labels:
    app: kafka-ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
   #   nodePort: 31080
  selector:
    app: kafka-ui

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: kafka
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafkakui-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "kafkaui.homelab.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 8080
